# coral-cover-economics

./: .gitignore  GLMM_coral_cover_preprocessed.txt  README.md  index.html  pyproject.toml  requirements.txt
docs/: index.html
docs/exported_data/: country_results.json  cumulative_country_results.json  gdp_impacts.json  manifest.json  model_curves.json  sites_cumulative_rcp45_2100_Compound_3.81pct_pp.json  sites_cumulative_rcp85_2050_Compound_3.81pct_pp.json  sites_cumulative_rcp85_2100_Compound_3.81pct_pp.json  sites_y_future_rcp45_2050_Compound_3.81pct_pp.json  sites_y_future_rcp45_2050_Linear_3.81pct_pp.json  sites_y_future_rcp45_2050_Tipping_Point_threshold=10pct.json  sites_y_future_rcp45_2100_Compound_3.81pct_pp.json  sites_y_future_rcp45_2100_Linear_3.81pct_pp.json  sites_y_future_rcp45_2100_Tipping_Point_threshold=10pct.json  sites_y_future_rcp85_2050_Compound_3.81pct_pp.json  sites_y_future_rcp85_2050_Linear_3.81pct_pp.json  sites_y_future_rcp85_2050_Tipping_Point_threshold=10pct.json  sites_y_future_rcp85_2100_Compound_3.81pct_pp.json  sites_y_future_rcp85_2100_Linear_3.81pct_pp.json  sites_y_future_rcp85_2100_Tipping_Point_threshold=10pct.json  summary.json  trajectories.json
notebooks/: hbb.ipynb  verification_economics.ipynb
src/: config.py  hb_beta_model.py  mpkx_loading.py  plot_config.py  utils.py
src/economics/: __init__.py  analysis.py  cumulative_impact.py  data_loader.py  depreciation_models.py  export_web_data.py  plotting.py  run_economic_analysis.py
src/native_r/: 1_run_the_beta_model.Rmd  run_beta_model_from_preprocessed.Rmd
(+30 files in other folders)
